fixed menu nav changed drop shadow and set z-index of main nav to 2 so it overlaps menu nav

--- a/styles/inserts.css
+++ b/styles/inserts.css
@@ -5,6 +5,7 @@
   font-family: var(--title);
   box-shadow: 0 0 .25rem black;
   width: 100vw;
+  z-index: 2;
 }
 
 .main-header::after {
